--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "family recipe site",
   "main": "index.html",
   "dependencies": {
+    "flux": "^3.1.3",
+    "immutable": "^3.8.2",
+    "js-md5": "^0.7.3",
     "react": "^0.14.9",
     "react-dom": "^0.14.9"
   },
@@ -13,7 +16,6 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.25.0",
-    "image-webpack-loader": "^3.4.2",
     "node-sass": "^3.13.1",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.2",
