--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "familyrecipe",
-  "version": "1.0.0",
-  "description": "family recipe site",
-  "main": "index.html",
+  "name": "recipes",
+  "version": "0.1.0",
+  "private": true,
+  "proxy": "http://localhost:8888",
   "dependencies": {
-    "flux": "^3.1.3",
-    "immutable": "^3.8.2",
-    "js-md5": "^0.7.3",
-    "react": "^0.14.9",
-    "react-dom": "^0.14.9"
-  },
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.25.0",
-    "node-sass": "^3.13.1",
-    "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.2",
-    "webpack": "^1.15.0",
-    "webpack-dev-server": "^1.14.1"
+    "@material-ui/core": "^3.8.3",
+    "@material-ui/icons": "^3.0.2",
+    "classnames": "^2.2.6",
+    "cross-fetch": "^3.0.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
+    "react-scripts": "2.1.3",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "build": "webpack",
-    "start": "webpack-dev-server"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "author": "",
-  "license": "ISC"
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
