--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "2.1.3",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
