--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "private": true,
   "proxy": "http://localhost:8888/api/",
   "dependencies": {
-    "@material-ui/core": "^3.8.3",
+    "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "classnames": "^2.2.6",
-    "cross-fetch": "^3.0.0",
+    "cross-fetch": "^3.0.4",
     "immutable": "^4.0.0-rc.12",
     "md5": "^2.2.1",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-redux": "^6.0.0",
-    "react-scripts": "2.1.3",
-    "react-select": "^2.4.1",
-    "redux": "^4.0.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^6.0.1",
+    "react-scripts": "^3.2.0",
+    "react-select": "^2.4.4",
+    "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0"
