--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@material-ui/icons": "^3.0.2",
     "classnames": "^2.2.6",
     "cross-fetch": "^3.0.4",
-    "immutable": "^4.0.0-rc.12",
+    "immer": "^7.0.7",
     "md5": "^2.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
