--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "classnames": "^2.2.6",
-    "cross-fetch": "^3.0.4",
+    "cross-fetch": "^3.1.4",
     "immer": "^8.0.1",
     "md5": "^2.2.1",
     "react": "^16.12.0",
@@ -32,5 +32,15 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "eslint": "^7.26.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "jest-puppeteer": "^5.0.3",
+    "prettier": "2.3.0"
+  }
 }
