--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build && node scripts/postBuild.js",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll --testMatch **/src/**/*.test.js",
     "eject": "react-scripts eject"
   },
   "browserslist": [
@@ -34,13 +34,15 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint": "^7.26.0",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest-puppeteer": "^5.0.3",
-    "prettier": "2.3.0"
+    "prettier": "2.3.0",
+    "puppeteer": "^9.1.1",
+    "redux-mock-store": "^1.5.4"
   }
 }
