--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@testing-library/dom": "^7.31.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@types/react": "^17.0.6",
