--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build && node scripts/postBuild.js",
     "test": "react-scripts test --watchAll --testMatch **/src/**/*.test.js",
+    "test:ci": "react-scripts test --watchAll=false --testMatch **/src/**/*.test.js",
     "eject": "react-scripts eject",
     "lint": "eslint src"
   },
