--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
       }
     ],
     "react/prop-types": 0,
+    "react/jsx-no-bind": "off",
     "react/jsx-props-no-spreading": 0,
     "object-curly-newline": "off",
     "comma-dangle": [
