--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/styles": "^4.11.5",
     "classnames": "^2.2.6",
     "cross-fetch": "^3.1.4",
     "immer": "^9.0.6",
@@ -14,12 +15,14 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^6.0.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
     "react-select": "^2.4.4",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^5.10.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
