--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "recipes",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8888/api/",
+  "proxy": "http://localhost:8888",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && node scripts/postBuild.js",
+    "build": "react-scripts build",
     "test": "react-scripts test --watchAll --testMatch **/src/**/*.test.js",
     "test:ci": "react-scripts test --watchAll=false --testMatch **/src/**/*.test.js",
     "eject": "react-scripts eject",
